[tool.poetry]
name = "pancake-cui"
version = "0.2.0"
description = "Pancake CUI Plugin — CLI 框架 + TUI 交互界面，Click + Rich 驱动"
authors = ["drayee <1473443474@qq.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "pancake_cui"}]

[tool.poetry.dependencies]
python = "^3.10"
pancake_framework = ">=0.2.0"
click = "^8.0.0"
rich = "^13.0.0"

[tool.poetry.plugins."pancake.plugins"]
cui = "pancake_cui:Main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
